--- a/MovieReviewApp/build.gradle
+++ b/MovieReviewApp/build.gradle
@@ -37,9 +37,7 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.0' 
-    implementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final'
-    implementation 'org.glassfish:jakarta.el:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
